2004-05-29  Pascal Obry  <pascal@obry.org>

	* aws-client-xml.ads:
	Remove pragma pure has this is a wrong categorisation.
	Add comment.

2004-05-29  Pascal Obry  <pascal@obry.org>

	* aws-client-xml-input_sources.ads, aws-client-xml-input_sources.adb:
	Minor reformatting and comment update.

	* aws-client-xml.ads:
	Minor reformatting and comment update.

2004-05-29  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-client-xml.ads, aws-client-xml-input_sources.ads,
	  aws-client-xml-input_sources.adb:
	New packages for support SAX parse just from client connection.

2004-05-20  Pascal Obry  <pascal@obry.org>

	* templates_parser-xml.ads, templates_parser-xml.adb:
	New version, moved here from src.
	(Load): New routine.

2004-05-17  Pascal Obry  <pascal@obry.org>
	
	* aws-jabber.adb:
	Use AI302.Containers (future standard Ada.Containers library) instead
         of Table_Of...G containers.
        Update copyright notice.

2003-11-25  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-jabber.adb:
	(Check_Presence): Properly generate the from attribute.

2003-07-07  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-jabber.ads, aws-jabber.adb:
	Initial revision.

2003-05-08  Pascal Obry  <p.obry@wanadoo.fr>

	* README:
	Add some comment.

2003-05-06  Pascal Obry  <p.obry@wanadoo.fr>

	* README:
	Initial revision.